# iCubAudioAttention

./: .gitignore  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt
Dependencies/fftw-3.3.8/: CMakeLists.txt
Dependencies/fftw3/: CMakeLists.txt
TensorFlowTutorials/ObjectRecognitionTrain/test/: CMakeLists.txt  main.cpp
app/: #CMakeLists.txt#  CMakeLists.txt
app/audioDataDumper/: CMakeLists.txt
app/audioDataDumper/scripts/: audioDataDumper.xml.template
app/audioMotorControl/scripts/: audioMotorControl.xml.template
app/audio_attention/: CMakeLists.txt
app/audio_attention/conf/: Audio_Attention_Config.ini  audio_attention_config.ini
app/audio_attention/scripts/: audio_attention.xml.template
app/audio_attention_demo/: CMakeLists.txt
app/audio_attention_demo/conf/: Audio_Attention_Demo_Long_Config.ini  Audio_Attention_Demo_Short_Config.ini  Video_Demo_Config.ini  audio_attention_demo_long_config.ini  audio_attention_demo_short_config.ini  video_demo_config.ini
app/audio_attention_demo/scripts/: audio_attention_demo_long.xml.template  audio_attention_demo_short.xml.template  video_demo.xml.template
app/audio_experiment/: CMakeLists.txt
app/audio_experiment/conf/: Audio_Experiment_Config.ini
app/audio_experiment/scripts/: audio_experiment_collection.xml.template  audio_experiment_collection_movement.xml.template  audio_experiment_processing.xml.template
app/bayesianMapApp/: CMakeLists.txt
app/bayesianMapApp/scripts/: bayesianMapApp.xml.template
app/frequencyVisualisation/: CMakeLists.txt
app/frequencyVisualisation/scripts/: frequencyVisualisation.xml.template  frequencyVisualisation_postprocessor.xml.template  frequencyVisualisation_preprocessor.xml.template
app/frequency_visualisation/: CMakeLists.txt
app/frequency_visualisation/scripts/: frequency_visualisation_postprocessor.xml.template  frequency_visualisation_preprocessor.xml.template
app/iCubAudioAttention/: CMakeLists.txt
app/iCubAudioAttention/conf/: audioConfig.ini
app/icubAudioAttention/: CMakeLists.txt
app/icubAudioAttention/conf/: audioConfig.ini
app/icubAudioAttention/scripts/: iCubAudioAttention.xml.template
app/memoryMapper/: CMakeLists.txt
app/memoryMapper/conf/: memoryMapperConfig.ini
app/robotStartUp/: CMakeLists.txt
app/robotStartUp/scripts/: robotStartUp.xml.template
app/robot_initialize/: CMakeLists.txt
app/robot_initialize/scripts/: robot_initialize.xml.template
app/ros_audio_remapper/: CMakeLists.txt
app/ros_audio_remapper/conf/: ros_audio_remapper_config.ini
app/ros_audio_remapper/scripts/: ros_audio_remapper.xml.template
app/tests/: CMakeLists.txt
audioCubLib/: CMakeLists.txt
audioCubLib/src/: audioUtil.cpp  beamformer.cpp  butterworthFilter.cpp  gammatoneFilterBank.cpp  hilbertTransform.cpp
dependencies/: CMakeLists.txt
modules/: CMakeLists.txt
modules/audioBayesianMap/: CMakeLists.txt
modules/audioBayesianMap/src/: audioBayesianMapPeriodicThread.cpp  main.cpp
modules/audioExperiment/: CMakeLists.txt
modules/audioExperiment/audioRunner/: CMakeLists.txt
modules/audioExperiment/audioStreamer/: CMakeLists.txt
modules/audioExperiment/haltCatcher/: CMakeLists.txt
modules/audioPreprocessor/: CMakeLists.txt
modules/audioPreprocessor/doc/: README.md
modules/audioPreprocessor/src/: audioPreprocessorModule.cpp  audioPreprocessorPeriodicThread.cpp  main.cpp
modules/frequencyVisualisation/: CMakeLists.txt
modules/frequencyVisualisation/src/: freqVisualisationModule.cpp  freqVisualisationPeriodicThread.cpp  freqVisualisationRatethread.cpp  main.cpp
modules/remoteInterface/: CMakeLists.txt  remoteInterface.cpp
modules/rosAudioRemapper/: CMakeLists.txt
modules/rosAudioRemapper/src/: main.cpp  rosAudioRemapperModule.cpp  rosAudioRemapperPeriodicThread.cpp
modules/rosRemoteInterface/: CMakeLists.txt  package.xml
modules/rosRemoteInterface/launch/: ros_remote_interface.launch
modules/rosRemoteInterface/msg/: Sound.msg
modules/rosRemoteInterface/src/: ros_remote_interface.cpp
src/: CMakeLists.txt
src/Configuration/: Config.cpp  Config.h  ConfigParser.cpp  loadFile.xml
src/YarpBayesianMap/: CMakeLists.txt
src/YarpBayesianMap/include/: BayesianModule.h  BayesianRatethread.h
src/YarpBayesianMap/src/: BayesianModule.cc  main.cpp
src/YarpPreprocessing/: CMakeLists.txt
src/YarpPreprocessing/include/: AudioPreprocesserModule.h  AudioPreprocesserRatethread.h  ConfigParser.h  beamFormer.h  gammatonFilter.h  gammatoneFilter.h
src/YarpPreprocessing/src/: AudioPreprocesserModule.cc  AudioPreprocesserRatethread.cpp  Config.cpp  ConfigParser.cpp  beamFormer.cc  gammatonFilter.cc  gammatoneFilter.cc  loadFile.xml  main.cpp
src/audioAttentionControl/src/: mexmain.cpp
src/audioAttentionFeedback/: CMakeLists.txt
src/audioAttentionFeedback/cmake/: FindMatlab.cmake
src/audioAttentionFeedback/src/: mexmain.cpp
src/audioAttentionInterface/: CMakeLists.txt  CMakeLists.txt~
src/audioAttentionInterface/src/: mexmain.cpp
src/audioAttentionManager/: CMakeLists.txt
src/audioAttentionManager/src/: audioAttentionManagerModule.cpp  audioAttentionManagerRatethread.cpp
src/audioAttentionSendMap/: CMakeCache.txt  CMakeLists.txt
src/audioAttentionSendMap/src/: mexmain.cpp  (+1 more)
src/audioBayesianMap/: CMakeLists.txt
src/audioBayesianMap_refactor/: CMakeLists.txt
src/audioCapture/: CMakeLists.txt
src/audioCaptureInterface/: CMakeLists.txt  remoteMic.cpp
src/audioExperiment/: CMakeLists.txt
src/audioFiltering/: CMakeLists.txt  setup.sh
src/audioPowerMap/: CMakeLists.txt
src/audioPowerMap_refactor/: CMakeLists.txt
src/audioPreprocessor/: CMakeLists.txt
src/audioPreprocessor_refactor/: CMakeLists.txt
src/egoNoiseCalibration/: CMakeLists.txt
src/frequencyVisualisation/: CMakeLists.txt
src/gammatonePhase/: CMakeLists.txt
src/gazeInterface/: CMakeLists.txt
src/headAngleMemoryMapper/: CMakeLists.txt
src/headingAudio/: CMakeLists.txt  headingControl.cpp
src/mapAudio/: CMakeLists.txt
src/mosaicPanHead/: CMakeLists.txt
src/remoteInterface/: remoteMic.cpp
src/soundMonitor/: CMakeLists.txt
(+650 files in other folders)
