# Copyright: (C) 2019 Department of Neuroscience - University of Lethbridge
# Authors: Austin Kothig <kothiga@uleth.ca>
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 3.5)

add_subdirectory ( audio_attention         )
add_subdirectory ( audio_attention_demo    )
add_subdirectory ( audio_experiment        )
add_subdirectory ( frequency_visualisation )
add_subdirectory ( robot_initialize        )
