# Copyright: (C) 2015 RBCS Robotics Brain and Cognitive Science
# Authors: Francesco Rea
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)
#add_subdirectory     ( headingAudio             )
if(ENABLE_COMPILEONPC104)
  add_subdirectory    ( remoteInterface          )
 add_subdirectory(headingAudio) 
else(ENABLE_COMPILEONPC104)
  #add_subdirectory    ( mosaicPanHead           )
  add_subdirectory    ( gazeInterface           )
  #add_subdirectory    ( audioCaptureInterface    )
  add_subdirectory    ( egoNoiseCalibration      )
  add_subdirectory    ( mapAudio                 )
  add_subdirectory    ( headAngleMemoryMapper    )
  add_subdirectory    ( audioPreprocessing	     )
  add_subdirectory    ( audioBayesianMap  	     )
  add_subdirectory    ( frequencyVisualisation   )
  add_subdirectory    ( soundMonitor             )
  add_subdirectory    ( audioMemoryMapper        )
  add_subdirectory    ( audioAttentionManager    )
    if(ENABLE_MATLAB)
    add_subdirectory  ( audioCapture             )
    add_subdirectory  ( audioAttentionSendMap    )
    add_subdirectory  ( audioAttentionControl    )
    add_subdirectory  ( audioAttentionFeedback   )
    add_subdirectory  ( gammatonePhase           )
    add_subdirectory  ( frequencyVisualisation   )
  endif(ENABLE_MATLAB)
endif(ENABLE_COMPILEONPC104)
