# Copyright: (C) 2019 Department of Neuroscience - University of Lethbridge
# Authors: Austin Kothig <kothiga@uleth.ca>
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 3.5)

#add_subdirectory ( audioPlayer   )
add_subdirectory ( audioRunner   )
add_subdirectory ( audioStreamer )
#add_subdirectory ( haltCatcher   )