# Copyright: (C) 2018 Department of Neuroscience - University of Lethbridge
# Authors: Austin Kothig
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)
#add_subdirectory     ( audioPlayer   )
add_subdirectory     ( audioRunner   )
add_subdirectory     ( audioStreamer )